# webiq-modbus-iohandler

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODEX_CONTEXT_NOTES.md  CONTRIBUTING.md  LICENSE  README.md  pr_body.md
.github/: dependabot.yml
.github/workflows/: CI.yml  coverage.yml  release.yml  sanitizers.yml
.specify/memory/: constitution.md
.specify/specs/: 2025-10-17-modbus-modbus-sdk.md  2025-10-17-webiq-modbus-tcp-rtu-plan.md  2025-10-17-webiq-modbus-tcp-rtu-spec.md  2025-10-17-webiq-modbus-tcp-rtu-tasks.md
cmake/: WebIQModbusIoHandlerConfig.cmake.in  nlohmann_json.cmake
cmake/toolchains/: arm64.cmake  armhf.cmake
config/: README.md  ci.modbus.json  example.modbus.json
config/examples/: rtu.modbus.json  tcp.double_word_order.modbus.json  tcp.modbus.json
config/schema/: modbus.schema.json
doc/: README.md  sdk_ref.md
doc/sdk/ioHandlerSDK/examples/: README.md  SubscriptionGroup.cpp  SubscriptionGroup.h  example.cpp  example.h
doc/sdk/ioHandlerSDK/include/: ioHandler.h  variant_value.h  variant_value_compare.h  variant_value_helpers.h
doc/sdk/notes/: rtu_stub.md  sdk_ref_example.md  sdk_ref_variant.md
examples/consumer-cmake/: CMakeLists.txt  README.md  main.cpp
include/: AsciiModbusClient.hpp  IModbusClient.hpp  ModbusError.hpp  ModbusIoHandler.hpp  export.hpp
scripts/: README.md  verify_layout_and_run.ps1  verify_layout_and_run.sh
src/: Export.cpp  ModbusIoHandler.cpp  log.hpp
src/modbus/: AsciiModbusClient.cpp  ModbusClient.cpp
tests/: README.md
tests/integration/: ascii_sim.py  modbus_sim.py  requirements.txt  test_e2e.cpp  test_e2e_ascii.cpp  test_modbus_simple.py
tests/unit/: test_api_coils_array.cpp  test_api_double_read_array.cpp  test_api_double_word_order_abcd.cpp  test_api_double_word_order_badc.cpp  test_api_double_word_order_cdab.cpp  test_api_double_word_order_dcba.cpp  test_api_double_write_number.cpp  test_api_fc15_bad_array.cpp  test_api_fc16_bad_array.cpp  test_api_fc2.cpp  test_api_fc3_array.cpp  test_api_fc3_array_2.cpp  test_api_fc4_array.cpp  test_api_fc4_array_2.cpp  test_api_float_nonfinite.cpp  test_api_float_swap.cpp  test_api_int16_scale_bounds.cpp  test_codec.cpp  test_config_invalid.cpp  test_config_invalid_double.cpp  test_config_invalid_float_count.cpp  test_diagnostics.cpp  test_exception_map.cpp  test_scale_zero.cpp  test_stub.cpp
